APB-10446 align names related to check upload status and upscan, simplified model
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
@@ -55,7 +55,7 @@
             }
             case UploadStatus.InProgress => {
                 @govukButton(Button(
-                    href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.showResult.url),
+                    href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.showUploadResult.url),
                     content = Text(messages("common.continue"))
                 ))
             }
