--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadPage.scala.html
@@ -105,7 +105,7 @@
             data-success="@{appConfig.thisFrontendBaseUrl}@{AppRoutes.apply.amls.AmlsEvidenceUploadController.showUploadResult.url}"
             data-check-upload-status-max-attempts="@{appConfig.Upscan.checkUploadStatusMaxAttempts}"
             data-check-upload-status-interval-ms="@{appConfig.Upscan.checkUploadStatusInterval.toMillis}"
-            data-max-file-size="@{appConfig.Upscan.maxFileSize}"
+            data-max-file-size="@{appConfig.Upscan.maxFileSize.toBytes}"
             aria-live="assertive"
             >
             </span>
