APB-10399 lowercase package names as per scala convention
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/EmailVerificationPasscodesPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/EmailVerificationPasscodesPage.scala.html
@@ -16,7 +16,7 @@
 
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.testOnly.controllers.EmailVerificationPasscodesController.Passcode
+@import uk.gov.hmrc.agentregistrationfrontend.testonly.controllers.EmailVerificationPasscodesController.Passcode
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.components.CopyButton
 @import views.html.helper.CSPNonce
 
