--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestLinkPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestLinkPage.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
-@import uk.gov.hmrc.agentregistrationfrontend.testOnly.model.TestOnlyLink
+@import uk.gov.hmrc.agentregistrationfrontend.testonly.model.TestOnlyLink
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 
 @this(
