--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/UpscanErrorPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/UpscanErrorPage.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
+@import uk.gov.hmrc.agentregistrationfrontend.model.upscan.UpscanErrorCode
 
 @this(
         layout: Layout,
@@ -22,15 +23,17 @@
 )
 
 @(
-        errorCode: String
-)(implicit request: RequestHeader, messages: Messages)
+        errorCode: UpscanErrorCode)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{"upscanError"}
-@pageTitle = @{messages(s"$key.$errorCode.title")}
+@pageTitle = @{messages(s"$key.${errorCode.toString}.title")}
 
 @layout(pageTitle) {
   <h1 class="govuk-heading-l">@(pageTitle)</h1>
-  <p class="govuk-body">@messages(s"$key.$errorCode.message")</p>
+  <p class="govuk-body">@messages(s"$key.${errorCode.toString}.message")</p>
   <p class="govuk-body">
    @govukButton(Button(
       href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.show.url),
