--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/CheckYourAnswersPage.scala.html
@@ -45,7 +45,7 @@
     <h1 class="govuk-heading-l">@messages(s"$key.title")</h1>
     @answerSummary(
         key,
-        answers = memberDetails
+        memberProvidedDetails = memberDetails
     )
     <p class="govuk-body">
     @govukButton(Button(
