[WG][APB-10041] Change your answers - LLP, PR comments4

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/AnswerSummary.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import uk.gov.hmrc.agentregistration.shared.llp.MemberProvidedDetails
-@import uk.gov.hmrc.agentregistration.shared.llp.{MemberNino, UserProvidedNino}
+@import uk.gov.hmrc.agentregistration.shared.llp.{MemberNino, MemberSaUtr}
 
 @this(
   govukSummaryList: GovukSummaryList
